# lf-capture

./: CMakeLists.txt  analyze-blink-log.cpp  analyze-blinkled.cpp  analyze-flicker.cpp  analyze-luminosity.cpp  analyze-qr.cpp  aravis-test.cpp  araviscapture.cpp  araviscapture.h  capture.cpp  capture.h  lf-signal.cpp  main.cpp  plot-numbers.cpp  serial.cpp  serial.h  turntable.cpp  turntable.h  webcam-scale-crop.cpp
